# antipublicbot

./: .env.example  README.md  pyproject.toml
src/: bootstrap.py  bot.py  config.py  importers.py  storage.py
tests/: test_bootstrap.py  test_bot.py  test_config.py  test_importers.py  test_storage.py
